test/CheckError/SizeOf/SizeOfUnsizedTemplateType.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

template <typename T>
size_t getTypeSize() {
	// CHECK: .loci:7:9: error: cannot find static method '__sizeof' for type 'T'
	return sizeof(T);
}

// CHECK: 2 errors generated.
